--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,12 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/document/document.js"></script>
+          <script src="app/document/index/index.controller.js"></script>
+          <script src="app/document/revision-new/revision-new.controller.js"></script>
+          <script src="app/document/revision/revision.controller.js"></script>
+          <script src="app/document/show/show.controller.js"></script>
+          <script src="app/document/wdiff/wdiff.controller.js"></script>
           <script src="app/wdiff/wdiff.controller.js"></script>
           <script src="app/wdiff/wdiff.js"></script>
           <script src="components/auth/auth.service.js"></script>
